# ChemotherapyRegimeModel

./: .gitignore  Doxyfile  README.md  main.py  pyproject.toml
data/: .gitignore  README.md  dropped_regimes.txt
report/: report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc  sample.bib
src/: README.md  plots.py  train.py  visualise.py
src/crn/: README.md  crn.py  plots.py  preprocess.py
src/crn/preprocessed/: crn_weights.pt  encoding_reference.txt  label_encoders.pkl  meta.json  outcome_model.pkl  scaler.pkl  t_learner_arm0.pt  t_learner_arm1.pt  t_learner_arm2.pt  target_scaler.pkl
src/models/: README.md  bowl.py  causal_forest.py  dynamic_dml.py  lstm_model.py  metrics.py  panel_utils.py  slearner.py  tlearner.py
src/preprocess/: README.md  preprocess.py  semisynth_gen.py  synth_gen.py
src/semi-eval/: README.md  evaluate_generators.py
tests/: README.md  conftest.py  test_metrics.py  test_panel_utils.py  test_preprocess.py  test_slearner.py  test_tlearner.py
